# speak-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.toml
.github/workflows/: release.yaml
src/: config.rs  main.rs  ui.rs
src/capture/: mod.rs
src/ui/: common.rs  mod.rs  utils.rs
src/utils/: mod.rs  resample.rs
src/whisper/: mod.rs  resample.rs
ui/: icon-button.slint  window.slint
