[package]
name = "speak-rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.98"
cpal = "0.15.3"
whisper-rs = { version = "0.14.2", features = ["cuda", "log_backend"] }
rubato = "0.16.2"
env_logger = "0.11.8"
log = "0.4.27"
slint = { version = "1.11", features = [
    "backend-winit-wayland",
    "renderer-skia",
] }
arboard = { version = "3.5.0", features = [
    "wayland-data-control",
    "wl-clipboard-rs",
] }
i-slint-backend-winit = "1.11.0"

[build-dependencies]
slint-build = "1.11"
